force-app/main/default/objects/Case/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address line 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>