force-app/main/default/objects/Case/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <label>Address line 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>