force-app/main/default/objects/Case/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <label>Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>