force-app/main/default/objects/Case/fields/Address_State__c.field-meta.xml
<CustomField>
    <fullName>Address_State__c</fullName>
    <label>State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>