force-app/main/default/objects/Case/fields/Address_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Address_Zipcode__c</fullName>
    <label>Zipcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>