force-app/main/default/objects/Case/fields/Anonymous_reporter__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_reporter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous Reporter</label>
    <type>Checkbox</type>
</CustomField>