force-app/main/default/objects/Case/fields/In_Home_Service__c.field-meta.xml
<CustomField>
    <fullName>In_Home_Service__c</fullName>
    <label>In Home Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request of Other Agency</fullName>
            </value>
            <value>
                <fullName>Services to Family and Children</fullName>
            </value>
            <value>
                <fullName>Kinship Information</fullName>
            </value>
            <value>
                <fullName>Interagency Family Preservation Services</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement</fullName>
            </value>
            <value>
                <fullName>Independent Living After Services</fullName>
            </value>
            <value>
                <fullName>Consolidated Services</fullName>
            </value>
            <value>
                <fullName>Request to file a CINA Petition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>