force-app/main/default/objects/Case/fields/Information_and_Referral__c.field-meta.xml
<CustomField>
    <fullName>Information_and_Referral__c</fullName>
    <label>Information and Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Search</fullName>
            </value>
            <value>
                <fullName>Environmental Emergency Assistance - Non</fullName>
            </value>
            <value>
                <fullName>Environmental Emergency Assistance-Aged</fullName>
            </value>
            <value>
                <fullName>Parental Stress</fullName>
            </value>
            <value>
                <fullName>Foster Care Provider Interest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>I-R - Non-Aged</fullName>
            </value>
            <value>
                <fullName>Worker Assigned</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Rental Assistance</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Custody Issues</fullName>
            </value>
            <value>
                <fullName>I&amp;R - Aged</fullName>
            </value>
            <value>
                <fullName>Legal Issues</fullName>
            </value>
            <value>
                <fullName>FIP-Family Investment Center</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Uncontrollable Child</fullName>
            </value>
            <value>
                <fullName>To Be A Volunteer</fullName>
            </value>
            <value>
                <fullName>WIC</fullName>
            </value>
            <value>
                <fullName>Kinship Information</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Crisis Intervention</fullName>
            </value>
            <value>
                <fullName>Health Need</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Adaption Interest</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
            <value>
                <fullName>I&amp;R - Family</fullName>
            </value>
            <value>
                <fullName>Day Care</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>MEAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>