force-app/main/default/objects/Case/fields/Intake_number__c.field-meta.xml
<CustomField>
    <fullName>Intake_number__c</fullName>
    <label>Intake number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>