force-app/main/default/objects/Case/fields/Is_this_danger__c.field-meta.xml
<CustomField>
    <fullName>Is_this_danger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this danger</label>
    <type>Checkbox</type>
</CustomField>