force-app/main/default/objects/Case/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <label>Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>