force-app/main/default/objects/Case/fields/Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Override_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>