force-app/main/default/objects/Case/fields/Override_DatetTime__c.field-meta.xml
<CustomField>
    <fullName>Override_DatetTime__c</fullName>
    <label>Override DatetTime</label>
    <type>DateTime</type>
</CustomField>