force-app/main/default/objects/Case/fields/Override_User__c.field-meta.xml
<CustomField>
    <fullName>Override_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intakes1</relationshipName>
    <type>Lookup</type>
</CustomField>