force-app/main/default/objects/Case/fields/Reason_for_intake_override__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_intake_override__c</fullName>
    <label>Reason for intake override:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional information to be added to the referral.</fullName>
            </value>
            <value>
                <fullName>Additional people need to be added to the referral.</fullName>
            </value>
            <value>
                <fullName>Incorrect screening decision was approved.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>