force-app/main/default/objects/Case/fields/Request_for_Services__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Services__c</fullName>
    <label>Request for services</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Program__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult Guardianship</fullName>
            </value>
            <value>
                <fullName>Adult Foster Care</fullName>
            </value>
            <value>
                <fullName>Social Services for Adults</fullName>
            </value>
            <value>
                <fullName>In-Home Services</fullName>
            </value>
            <value>
                <fullName>Private Adoption Subsidy</fullName>
            </value>
            <value>
                <fullName>ICPC</fullName>
            </value>
            <value>
                <fullName>CPS History Clearance</fullName>
            </value>
            <value>
                <fullName>ASCRS-Adoption Search Contact</fullName>
            </value>
            <value>
                <fullName>ICAMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>