force-app/main/default/objects/Case/fields/Restrict_UnRestrict__c.field-meta.xml
<CustomField>
    <fullName>Restrict_UnRestrict__c</fullName>
    <label>Restrict/UnRestrict</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unrestrict</fullName>
                <default>true</default>
                <label>Unrestrict</label>
            </value>
            <value>
                <fullName>Restrict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>