force-app/main/default/objects/Case/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alleged victim</fullName>
            </value>
            <value>
                <fullName>Child day care provider</fullName>
            </value>
            <value>
                <fullName>Education personnel</fullName>
            </value>
            <value>
                <fullName>Friends/neighbor</fullName>
            </value>
            <value>
                <fullName>Legal,Law enforcement, or criminal justice person</fullName>
            </value>
            <value>
                <fullName>Medical Personnel</fullName>
            </value>
            <value>
                <fullName>Mental health personnel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other relative</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Reporter</fullName>
            </value>
            <value>
                <fullName>Social Service Personnel</fullName>
            </value>
            <value>
                <fullName>Substitute care Provider</fullName>
            </value>
            <value>
                <fullName>Unknown or missing</fullName>
            </value>
            <value>
                <fullName>Friend/Neighbor</fullName>
            </value>
            <value>
                <fullName>Biological Child</fullName>
            </value>
            <value>
                <fullName>Other Child (Not in Household)</fullName>
            </value>
            <value>
                <fullName>Alleged Maltreator</fullName>
            </value>
            <value>
                <fullName>Conservator</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
            <value>
                <fullName>Casehead</fullName>
            </value>
            <value>
                <fullName>I &amp; R Participant</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Legal Representive</fullName>
            </value>
            <value>
                <fullName>Anonymous reporter</fullName>
                <isActive>false</isActive>
                <label>Anonymous reporter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>