force-app/main/default/objects/Case/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Connect</description>
    <label>Case Connect</label>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>