force-app/main/default/objects/Case/fields/Service_Case_Id_Txt__c.field-meta.xml
<CustomField>
    <fullName>Service_Case_Id_Txt__c</fullName>
    <label>Service Case Id Txt</label>
    <length>18</length>
    <type>Text</type>
</CustomField>