force-app/main/default/objects/Case/fields/Service_Program__c.field-meta.xml
<CustomField>
    <fullName>Service_Program__c</fullName>
    <label>Service Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Welfare Services</fullName>
            </value>
            <value>
                <fullName>Adult Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>