force-app/main/default/objects/Case/recordTypes/I_R_Intake.recordType-meta.xml
<RecordType>
    <fullName>I_R_Intake</fullName>
    <active>false</active>
    <businessProcess>Intake</businessProcess>
    <label>I&amp;R Intake</label>
</RecordType>