force-app/main/default/objects/Case/listViews/All_Intakes.listView-meta.xml
<ListView>
    <fullName>All_Intakes</fullName>
    <columns>Danger__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>contact__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CASE_NUMBER</field>
        <operation>startsWith</operation>
        <value>IN-</value>
    </filters>
    <filters>
        <field>Intake_Approval_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <label>All Intakes</label>
</ListView>