force-app/main/default/objects/Case/listViews/CPS_Intakes.listView-meta.xml
<ListView>
    <fullName>CPS_Intakes</fullName>
    <columns>Danger__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>contact__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Child Protective Services</value>
    </filters>
    <label>CPS Intakes</label>
</ListView>