force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>Danger__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>contact__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Intakes</label>
</ListView>