force-app/main/default/objects/Case/listViews/Pending.listView-meta.xml
<ListView>
    <fullName>Pending</fullName>
    <columns>Danger__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>contact__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Intake_Approval_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <label>Pending</label>
</ListView>