force-app/main/default/objects/Case/listViews/Screened_Out.listView-meta.xml
<ListView>
    <fullName>Screened_Out</fullName>
    <columns>Danger__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>contact__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Received_Date__c</columns>
    <columns>Intake_Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Intake_Recommendations__c</field>
        <operation>equals</operation>
        <value>Screen Out</value>
    </filters>
    <filters>
        <field>Intake_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Screened Out</label>
</ListView>